--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "Abrahim Gaber's resume/portfolio page.",
   "author": "Abrahim Gaber",
   "dependencies": {
-    "bootstrap": "^5.3.0-alpha1",
-    "bootstrap-icons": "^1.10.3"
+    "bootstrap": "^5.3.0-alpha1"
   }
 }
