--- a/package.json
+++ b/package.json
@@ -4,6 +4,15 @@
   "description": "Abrahim Gaber's resume/portfolio page.",
   "author": "Abrahim Gaber",
   "dependencies": {
-    "bootstrap": "^5.3.0-alpha1"
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.3"
+  },
+  "devDependencies": {
+    "sass": "^1.58.3",
+    "live-server": "^1.2.2"
+  },
+  "scripts": {
+    "compile:sass": "sass --style=compressed src/scss:src/css",
+    "liveserver": "live-server src/"
   }
 }
